assign role + multiple role

--- a/userappAN/src/app/pages/sidebar/sidebar.component.html
+++ b/userappAN/src/app/pages/sidebar/sidebar.component.html
@@ -4,6 +4,11 @@
   <h2 class="menu-title">Menu</h2>
   <ul>
     <li><a routerLink="/tasks">📋 Tasks</a></li>
-    <li><a routerLink="/roles">⚙️ Roles</a></li>
+    
+    <li *ngIf="isAdmin"><a routerLink="/roles">⚙️ Roles</a></li>
+    
+    <li>
+      <a (click)="navigateToProfile()">👤 Profile</a>
+    </li>
   </ul>
 </div>
