--- a/userappAN/src/app/pages/add-task/add-task.component.html
+++ b/userappAN/src/app/pages/add-task/add-task.component.html
@@ -1,4 +1,5 @@
-<form (ngSubmit)="onSubmit()" #taskForm="ngForm">
+<div class="full-screen-background d-flex justify-content-center align-items-center min-vh-100">
+  <form (ngSubmit)="onSubmit()" #taskForm="ngForm">
     <label for="name">Task Name:</label>
     <input type="text" id="name" name="name" [(ngModel)]="task.name" required />
   
@@ -20,4 +21,5 @@
   
     <button type="submit" [disabled]="taskForm.invalid">Add Task</button>
   </form>
+</div>
   
