--- a/userappAN/src/app/pages/header/header.component.html
+++ b/userappAN/src/app/pages/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<header class="header">
+    
+    <div class="logo">MyApp</div>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <input type="text" placeholder="Search..." class="search-bar" />
+      <button class="login-btn">Login</button>
+    </div>
+  </header>
+  
