--- a/userappAN/src/app/pages/register/register.component.html
+++ b/userappAN/src/app/pages/register/register.component.html
@@ -1,8 +1,9 @@
-<div class="full-screen-background d-flex justify-content-center align-items-center min-vh-100">
+<div class="full-screen-background">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-sm-8 col-md-6 col-lg-4">
         <div class="card login-card p-4">
+          <!-- Language selector -->
           <select (change)="switchLanguage($event)" class="language-selector form-select mb-3">
             <option value="en">English</option>
             <option value="fr">Français</option>
@@ -12,6 +13,7 @@
           <h3 class="login-text text-center">{{ 'CREATE_ACCOUNT' | translate }}</h3>
           <hr>
 
+          <!-- Error messages -->
           <div class="alert alert-danger" role="alert" *ngIf="errorMsg.length">
             <p *ngFor="let msg of errorMsg">{{ msg }}</p>
           </div>
