--- a/userappAN/src/app/pages/header/header.component.html
+++ b/userappAN/src/app/pages/header/header.component.html
@@ -2,7 +2,7 @@
     
     <div class="logo">MyApp</div>
     <nav class="nav-links">
-      <a href="#">Home</a>
+      <a href="home">Home</a>
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
