--- a/userappAN/src/app/pages/header/header.component.html
+++ b/userappAN/src/app/pages/header/header.component.html
@@ -8,8 +8,8 @@
       <a href="#">Contact</a>
     </nav>
     <div class="header-actions">
-      <input type="text" placeholder="Search..." class="search-bar" />
-      <button class="login-btn">Login</button>
+      
+      <button class="login-btn" (click)="logout()">Logout</button>
     </div>
   </header>
   
