--- a/userappAN/src/app/pages/supplier-list/supplier-list.component.css
+++ b/userappAN/src/app/pages/supplier-list/supplier-list.component.css
@@ -171,3 +171,18 @@
 .btn-add:hover {
   background: #218838;
 }
+.btn-chart {
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #007bff;
+  color: white;
+  border: none;
+}
+
+.btn-chart:hover {
+  background: #0056b3;
+}
+
